--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <style>
       body {
           font-family: 'Roboto', sans-serif;
+          background-color: #11191f;
+          color:azure;
+          font-size: 20px;
       }
 
       .card {
@@ -30,12 +33,15 @@
           border-radius: 50px;
           padding: 10px 20px;
       }
-      .text-info {
-          font-size: 20px;
+
+      .card-title, .card-text{
+        color:black;
       }
-      .text-white {
-          font-size: 20px;
+
+      .caption h3{
+        font-size: 18px;
       }
+      
     </style>
 
   </head>
@@ -49,7 +55,7 @@
     <main class="container mt-5">
         <!-- Judul -->
         <section>
-            <h1 class="display-4"><b>Welcome to the Lifestyle Hub</b></h1>
+            <h1 class="display-5"><b>Welcome to Jabarano Lifestyle Hub</b></h1>
             <p class="text-secondary lead">Explore trends, wellness, and living your best life</p>
             <p class="mt-4">Lifestyle is all about finding balance, embracing health, and living in the moment. Whether you're into fitness, mindfulness, or just looking to elevate your daily routines, you've come to the right place.</p>
         </section>
@@ -73,7 +79,7 @@
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.
+                        additional content.
                       </p>
                     </div>
                   </div>
@@ -86,7 +92,7 @@
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.
+                        additional content.
                       </p>
                     </div>
                   </div>
@@ -110,7 +116,7 @@
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.
+                        additional content.
                       </p>
                     </div>
                   </div>
@@ -118,7 +124,7 @@
               </div>
 
             <div>
-                <a href="#" class="btn btn-primary mt-4 rounded">View More</a>
+                <a href="blog.html" class="btn btn-primary mt-4 rounded">View More</a>
             </div>            
         </section>
 
@@ -136,7 +142,7 @@
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.
+                        additional content.
                       </p>
                     </div>
                   </div>
@@ -149,7 +155,7 @@
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.
+                        additional content.
                       </p>
                     </div>
                   </div>
@@ -173,7 +179,7 @@
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.
+                        additional content.
                       </p>
                     </div>
                   </div>
@@ -181,16 +187,16 @@
               </div>
 
             <div>
-                <a href="#" class="btn btn-primary mt-4 rounded">View More</a>
+                <a href="blog.html" class="btn btn-primary mt-4 rounded">View More</a>
             </div>            
         </section>
 
         <!-- Join Our Community -->
         <section aria-label="Subscribe Examples" class="py-5">
-            <div class="container-md shadow p-5 bg-white rounded">
+            <div class="container-md shadow p-5 rounded" style="background-color: #15242f;">
                 <article class="text-center">
-                    <hgroup>
-                        <h2 class="mb-3">Join Our Community</h2>
+                    <hgroup class="caption">
+                        <h2 class="mb-1 text-light">Join Our Community</h2>
                         <h3 class="mb-4 text-muted">Subscribe for the latest lifestyle updates</h3>
                     </hgroup>
                     <form class="row g-3">
