--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-white p-3">
-    <a class="navbar-brand mb-0 h1 text-secondary" href="#"><strong>Jabarano</strong></a>
+<nav class="navbar navbar-expand-sm navbar-light p-3">
+    <a class="navbar-brand mb-0 h1 text-light" href="#"><strong>Jabarano</strong></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,10 +12,7 @@
                 <a href="about.html" class="text-info nav-link">About</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="text-info nav-link">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="text-white nav-link bg-primary rounded px-4">Subscribe</a>
+                <a href="#" class="text-white nav-link bg-primary rounded px-2">Subscribe</a>
             </li>
         </ul>
     </div>
