--- a/about.html
+++ b/about.html
@@ -10,10 +10,187 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <style>
+      body {
+          font-family: 'Roboto', sans-serif;
+          background-color: #11191f;
+          color:azure;
+          font-size: 20px;
+      }
+
+      .caption h3{
+        font-size: 18px;
+      }
+
+      .team-member {
+            background: white;
+            border-radius: 15px;
+            padding: 20px;
+            text-align: center;
+            margin: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .team-member img {
+            border-radius: 15px;
+            width: 100%;
+            height: auto;
+        }
+        .team-member h5 {
+            font-family: 'Arial', sans-serif;
+            font-size: 1.25rem;
+            margin-top: 15px;
+            margin-bottom: 5px;
+        }
+        .team-member p {
+            font-family: 'Arial', sans-serif;
+            font-size: 1rem;
+            color: #666;
+            margin-bottom: 15px;
+        }
+        .social-icons i {
+            font-size: 1.25rem;
+            color: black;
+            margin: 0 5px;
+        }
+
+    </style>
 </head>
 <body>
     <!-- Navbar -->
     <div class="" id="navbar"></div>
+
+    <!-- Image Section -->
+    <main class="container mt-5">
+        <!-- Judul -->
+        <section>
+            <h1 class="display-5"><b>About Lifestyle Vibes</b></h1>
+            <p class="text-secondary lead">Our Story & Vision</p>
+            <p class="mt-4">Lifestyle Vibes was created with a simple goal: to help people live better, healthier, and more fulfilling lives. We believe that true happiness comes from balance, mindfulness, and a deep connection to the world around us.</p>
+        </section>
+        <!-- Gambar Beserta Caption-->
+        <figure>
+            <img src="https://images.unsplash.com/photo-1507919909716-c8262e491cde" alt="Gambar 1" class="img-fluid mt-4 rounded">
+            <figcaption class="text-info mt-2"><a href="https://unsplash.com" target="_blank" class="text-decoration-none">Photo from Unsplash</a></figcaption>
+        </figure>
+
+        <!-- Our Mission -->
+        <section class="mt-5">
+            <div class="container mt-0 p-0">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-6">
+                <h2><b>Our Mission</b></h2>
+                <p class="h6 mt-4">Our mission is to inspire and empower individuals to live consciously. We cover various aspects of life including wellness, fitness, fashion, and mindfulness to help our audience elevate their everyday experiences.</p>
+                </div>
+                <div class="col-12 col-md-6">
+                <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="Mission Image">
+                </div>
+            </div>
+            </div>
+        </section>
+  
+
+        <!-- Meet the Team -->
+        <section class="mt-5">
+
+            <!-- Meet the Team Section -->
+        <section class="mt-5">
+            <div class="container">
+                <div class="row">
+                    <!-- First Row with 3 Team Members -->
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Sascia Franckurt, Chief Technology Officer" height="200" src="https://storage.googleapis.com/a1aa/image/ViJ2Xp1RQAKsA5G7fANcuobwBrwBf73niDSSUNRZoxVcELqTA.jpg" width="300">
+                            <h5>Sascia Franckurt</h5>
+                            <p>Chief Technology Officer</p>
+                            <div class="social-icons">
+                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-instagram"></i>
+                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-twitter"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Loudy William, Chief Operating Officer" height="200" src="https://storage.googleapis.com/a1aa/image/OlbBXto8kxYJAtSHNFO52bIeIb5ciMfTfImNAWWg0rAxIWUnA.jpg" width="300">
+                            <h5>Loudy William</h5>
+                            <p>Chief Operating Officer</p>
+                            <div class="social-icons">
+                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-instagram"></i>
+                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-twitter"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Charlie White, Lead Product Manager" height="200" src="https://storage.googleapis.com/a1aa/image/KJBYFfr255VKe0EB5vfrp6brrn2fkMZrG16pPuQ7e39NjYRdC.jpg" width="300">
+                            <h5>Charlie White</h5>
+                            <p>Lead Product Manager</p>
+                            <div class="social-icons">
+                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-instagram"></i>
+                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-twitter"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <!-- Second Row with 3 Team Members -->
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Angela Blue, Back-End Developer" height="200" src="https://storage.googleapis.com/a1aa/image/Ig0NAyhPjSLBAxbysRO39RlLrgayLpyDTJNyyQtyTIzGxi6E.jpg" width="300">
+                            <h5>Angela Blue</h5>
+                            <p>Back-End Developer</p>
+                            <div class="social-icons">
+                                <i class="fab fa-linkedin"></i>
+                                <i class="fab fa-instagram"></i>
+                                <i class="fab fa-facebook"></i>
+                                <i class="fab fa-twitter"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Add more team members as needed -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Join Our Community -->
+        <section aria-label="Subscribe Examples" class="py-5">
+            <div class="container-md shadow p-5 rounded" style="background-color: #15242f;">
+                <article class="text-center">
+                    <hgroup class="caption">
+                        <h2 class="mb-1 text-light">Stay in the Loop</h2>
+                        <h3 class="mb-4 text-muted">Subscribe to Our Newsletter</h3>
+                    </hgroup>
+                    <form class="row g-3">
+                        <!-- First Name Input -->
+                        <div class="col-12 col-md-4">
+                            <input type="text" class="form-control form-control-lg" id="firstname" name="firstname" placeholder="First Name" aria-label="First Name" required>
+                        </div>
+                        <!-- Email Input -->
+                        <div class="col-12 col-md-4">
+                            <input type="email" class="form-control form-control-lg" id="email" name="email" placeholder="Email" aria-label="Email" required>
+                        </div>
+                        <!-- Subscribe Button -->
+                        <div class="col-12 col-md-4 d-grid">
+                            <button type="submit" class="btn btn-primary rounded text-white" onclick="event.preventDefault()">Subscribe</button>
+                        </div>
+                    </form>
+                </article>
+            </div>
+        </section>
+
+
+        
+    </main>
 
     <!-- Load NavBar --> 
     <script src="navbar.js"></script>
