--- a/about.html
+++ b/about.html
@@ -12,6 +12,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <style>
+
+    *{
+        scroll-behavior: smooth;
+    }
+
       body {
           font-family: 'Roboto', sans-serif;
           background-color: #11191f;
@@ -24,34 +29,24 @@
       }
 
       .team-member {
-            background: white;
-            border-radius: 15px;
-            padding: 20px;
+            border-radius: 12px;
+            margin-top: 20px;
             text-align: center;
-            margin: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
         }
         .team-member img {
-            border-radius: 15px;
+            border-radius: 10px;
             width: 100%;
             height: auto;
         }
         .team-member h5 {
-            font-family: 'Arial', sans-serif;
-            font-size: 1.25rem;
             margin-top: 15px;
-            margin-bottom: 5px;
+            font-size: 18px;
+            font-weight: bold;
         }
         .team-member p {
-            font-family: 'Arial', sans-serif;
-            font-size: 1rem;
-            color: #666;
-            margin-bottom: 15px;
-        }
-        .social-icons i {
-            font-size: 1.25rem;
-            color: black;
-            margin: 0 5px;
+            margin: 5px 0;
+            color: #6c757d;
         }
 
     </style>
@@ -83,87 +78,76 @@
                 <p class="h6 mt-4">Our mission is to inspire and empower individuals to live consciously. We cover various aspects of life including wellness, fitness, fashion, and mindfulness to help our audience elevate their everyday experiences.</p>
                 </div>
                 <div class="col-12 col-md-6">
-                <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="Mission Image">
+                <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid" alt="Mission Image" style="border-radius: 12px;">
                 </div>
             </div>
             </div>
         </section>
-  
 
-        <!-- Meet the Team -->
+        <!-- Meet the Team  -->
         <section class="mt-5">
+            <div class="container mt-0 p-0">
 
-            <!-- Meet the Team Section -->
-        <section class="mt-5">
-            <div class="container">
-                <div class="row">
-                    <!-- First Row with 3 Team Members -->
-                    <div class="col-md-4">
-                        <div class="team-member">
-                            <img alt="Portrait of Sascia Franckurt, Chief Technology Officer" height="200" src="https://storage.googleapis.com/a1aa/image/ViJ2Xp1RQAKsA5G7fANcuobwBrwBf73niDSSUNRZoxVcELqTA.jpg" width="300">
-                            <h5>Sascia Franckurt</h5>
-                            <p>Chief Technology Officer</p>
-                            <div class="social-icons">
-                                <i class="fab fa-linkedin"></i>
-                                <i class="fab fa-instagram"></i>
-                                <i class="fab fa-facebook"></i>
-                                <i class="fab fa-twitter"></i>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="team-member">
-                            <img alt="Portrait of Loudy William, Chief Operating Officer" height="200" src="https://storage.googleapis.com/a1aa/image/OlbBXto8kxYJAtSHNFO52bIeIb5ciMfTfImNAWWg0rAxIWUnA.jpg" width="300">
-                            <h5>Loudy William</h5>
-                            <p>Chief Operating Officer</p>
-                            <div class="social-icons">
-                                <i class="fab fa-linkedin"></i>
-                                <i class="fab fa-instagram"></i>
-                                <i class="fab fa-facebook"></i>
-                                <i class="fab fa-twitter"></i>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="team-member">
-                            <img alt="Portrait of Charlie White, Lead Product Manager" height="200" src="https://storage.googleapis.com/a1aa/image/KJBYFfr255VKe0EB5vfrp6brrn2fkMZrG16pPuQ7e39NjYRdC.jpg" width="300">
-                            <h5>Charlie White</h5>
-                            <p>Lead Product Manager</p>
-                            <div class="social-icons">
-                                <i class="fab fa-linkedin"></i>
-                                <i class="fab fa-instagram"></i>
-                                <i class="fab fa-facebook"></i>
-                                <i class="fab fa-twitter"></i>
-                            </div>
-                        </div>
-                    </div>
+                <div class="">
+                    <h2><b>Meet The Team</b></h2>
+                    <p class="h6 mt-4">Our team consists of wellness enthusiasts, fitness experts, and lifestyle gurus. We're dedicated to bringing you the latest insights and trends to help you live your best life.</p>
                 </div>
 
                 <div class="row">
-                    <!-- Second Row with 3 Team Members -->
                     <div class="col-md-4">
                         <div class="team-member">
-                            <img alt="Portrait of Angela Blue, Back-End Developer" height="200" src="https://storage.googleapis.com/a1aa/image/Ig0NAyhPjSLBAxbysRO39RlLrgayLpyDTJNyyQtyTIzGxi6E.jpg" width="300">
-                            <h5>Angela Blue</h5>
-                            <p>Back-End Developer</p>
-                            <div class="social-icons">
-                                <i class="fab fa-linkedin"></i>
-                                <i class="fab fa-instagram"></i>
-                                <i class="fab fa-facebook"></i>
-                                <i class="fab fa-twitter"></i>
-                            </div>
+                            <img alt="Portrait of Sienna Hewitt" height="300" src="https://storage.googleapis.com/a1aa/image/7a5zAtffBZt5F0DKthK6S7D94ECl3jtyYqYRcTMd0zySagqTA.jpg" width="300" />
+                            <h5>Sienna Hewitt</h5>
+                            <p>Founder &amp; CEO</p>
+                            <p>Former co-founder of Opendoor. Early staff at Spotify and Clearbit.</p>
                         </div>
                     </div>
-
-                    <!-- Add more team members as needed -->
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Ashwin Santiago" height="300" src="https://storage.googleapis.com/a1aa/image/ihIAeKaGGuXLWiXUJIDyLJVdP9GBmnUmirZsikEWewYYagqTA.jpg" width="300" />
+                            <h5>Ashwin Santiago</h5>
+                            <p>Engineering Manager</p>
+                            <p>Lead engineering teams at Netflix, Pitch, and Protocol Labs.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Caitlyn King" height="300" src="https://storage.googleapis.com/a1aa/image/8Vhqcu80e2xbfEvW6HyYyegwOfhcOjx3sB3eZV5e2ANwjGo6E.jpg" width="300" />
+                            <h5>Caitlyn King</h5>
+                            <p>Product Designer</p>
+                            <p>Founding design team at Figma. Former Pleo, Stripe, and Tile.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Owen Garcia" height="300" src="https://storage.googleapis.com/a1aa/image/wMPJpbo2h9K0EhpLQpgi4EqQ510FunUbZxq6AgWh9hWkGo6E.jpg" width="300" />
+                            <h5>Owen Garcia</h5>
+                            <p>Frontend Developer</p>
+                            <p>Former frontend dev for Linear, Coinbase, and Postscript.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Lulu Meyers" height="300" src="https://storage.googleapis.com/a1aa/image/ty9xuCZMTx4mPlUMyB1DeHUrJVjTeFfaB0VOHW0tbZ3t0AVnA.jpg" width="300" />
+                            <h5>Lulu Meyers</h5>
+                            <p>Product Manager</p>
+                            <p>Founding design team at Figma.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="team-member">
+                            <img alt="Portrait of Orlando Diggs" height="300" src="https://storage.googleapis.com/a1aa/image/c6uyM8U6eEWWJiLSiGgWGiIi4mzNeheTrpopCU9Mik7r0AVnA.jpg" width="300" />
+                            <h5>Orlando Diggs</h5>
+                            <p>Backend Developer</p>
+                            <P>Former frontend dev for Linear</P>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- Join Our Community -->
-        <section aria-label="Subscribe Examples" class="py-5">
+        <section aria-label="Subscribe Examples" class="py-5" id="Subscribe">
             <div class="container-md shadow p-5 rounded" style="background-color: #15242f;">
                 <article class="text-center">
                     <hgroup class="caption">
@@ -171,15 +155,15 @@
                         <h3 class="mb-4 text-muted">Subscribe to Our Newsletter</h3>
                     </hgroup>
                     <form class="row g-3">
-                        <!-- First Name Input -->
+
                         <div class="col-12 col-md-4">
                             <input type="text" class="form-control form-control-lg" id="firstname" name="firstname" placeholder="First Name" aria-label="First Name" required>
                         </div>
-                        <!-- Email Input -->
+
                         <div class="col-12 col-md-4">
                             <input type="email" class="form-control form-control-lg" id="email" name="email" placeholder="Email" aria-label="Email" required>
                         </div>
-                        <!-- Subscribe Button -->
+
                         <div class="col-12 col-md-4 d-grid">
                             <button type="submit" class="btn btn-primary rounded text-white" onclick="event.preventDefault()">Subscribe</button>
                         </div>
@@ -192,7 +176,11 @@
         
     </main>
 
-    <!-- Load NavBar --> 
+    <!-- Load NavBar sama Footer--> 
     <script src="navbar.js"></script>
+    <script src="footer.js"></script>
+
+    <div id="footer"></div>
+
 </body>
 </html>
