--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,10 @@
                 <a href="about.html" class="text-info nav-link">About</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="text-white nav-link bg-primary rounded px-2">Subscribe</a>
+                <a href="blog.html" class="text-info nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a href="#Subscribe" class="text-white nav-link bg-primary rounded px-2">Subscribe</a>
             </li>
         </ul>
     </div>
