--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </div>
               <div class="col">
                   <div class="card">
-                      <a href="blog.html">
+                      <a href="blog.html" style="text-decoration: none;">
                       <img src="https://images.unsplash.com/photo-1445384763658-0400939829cd?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top"
                           alt="Nature Walk" />
                       <div class="card-body">
