--- a/blog.html
+++ b/blog.html
@@ -34,13 +34,6 @@
             line-height: 1.8;
         }
 
-        .featured-image {
-            max-height: 500px;
-            object-fit: cover;
-            width: 100%;
-            border-radius: 10px;
-        }
-
         .author-info {
             border-left: 3px solid #0d6efd;
             padding-left: 15px;
@@ -76,7 +69,7 @@
         <header class="blog-header">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8">
+                    <div class="">
                         <div class="text-center">
                             <h1 class="display-4 mb-3">Forest Bathing: Nature's Therapy</h1>
                             <div class="author-info mb-4">
@@ -93,15 +86,16 @@
             </div>
         </header>
 
-        <main class="container my-5">
+        <main class="container mt-5">
+
             <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="">
 
                     <!-- Gambar -->
                     <figure class="mb-4">
                         <img src="https://images.unsplash.com/photo-1445384763658-0400939829cd" 
                             alt="Person meditating in nature" 
-                            class="featured-image shadow-sm">
+                            class="img-fluid mt-4 rounded" style="border-radius: 12px;">
                         <figcaption class="text-center mt-2 text-muted">
                             Finding peace through mindful practices in nature
                         </figcaption>
